Reset password fixed
